added sync-api into loader